--- a/projects/index.html
+++ b/projects/index.html
@@ -73,9 +73,14 @@
                         </svg>
                     </a>
                 </div>
+                <p class="enw2" id="lastupdate">
+                    Last Updated:<br>
+                    <span id="lastupdatetime"></span>
+                </p>
             </ul>
         </nav>
         <script src="/scripts/sidemenu.js" type="text/javascript"></script>
+        <script src="/scripts/lastupdate.js" type="text/javascript"></script>
     </header>
     <main>
         <div class="pagehead">
