Modified blocks' title and id

--- a/en/index.html
+++ b/en/index.html
@@ -106,7 +106,7 @@
                     <p class="time enw2">Sep 2024 ~ Present</p>
                 </a>
             </div>
-            <h3 class="enw2" id="experience">Experience</h3>
+            <h3 class="enw2" id="experiences">Experiences</h3>
             <div class="items">
                 <a class="item" href="https://35.infor.org" target="_blank">
                     <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th's seal">
@@ -115,8 +115,12 @@
                     <p class="time enw2">Feb 2023 ~ Jul 2023</p>
                 </a>
             </div>
-            <h3 class="enw2" id="skill">Skill</h3>
+            <h3 class="enw2" id="skills">Skills</h3>
             <div class="smallitems">
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
+                    <p class="title enw2">Python 3</p>
+                </div>
                 <div class="item">
                     <img src="/pictures/profile_use/skill/html5.svg" alt="HTML5 icon">
                     <p class="title enw2">HTML 5</p>
@@ -130,16 +134,12 @@
                     <p class="title enw2">JavaScript</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon">
-                    <p class="title enw2">jQuery</p>
-                </div>
-                <div class="item">
-                    <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
-                    <p class="title enw2">Python 3</p>
-                </div>
-                <div class="item">
                     <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
                     <p class="title enw2">C</p>
+                </div>
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon">
+                    <p class="title enw2">jQuery</p>
                 </div>
                 <div class="item">
                     <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
