--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p class="time zhw">2024/09 ~ 2028/06</p>
                 </a>
             </div>
-            <h3 class="zhw" id="experience">經歷</h3>
+            <h3 class="zhw" id="experiences">經歷</h3>
             <div class="items">
                 <a class="item" href="https://35.infor.org" target="_blank">
                     <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th社徽">
@@ -113,8 +113,12 @@
                     <p class="time zhw">2023/02 ~ 2023/07</p>
                 </a>
             </div>
-            <h3 class="zhw" id="skill">技能</h3>
+            <h3 class="zhw" id="skills">技能</h3>
             <div class="smallitems">
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
+                    <p class="title zhw">Python 3</p>
+                </div>
                 <div class="item">
                     <img src="/pictures/profile_use/skill/html5.svg" alt="HTML5 icon">
                     <p class="title zhw">HTML 5</p>
@@ -128,16 +132,12 @@
                     <p class="title zhw">JavaScript</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon">
-                    <p class="title zhw">jQuery</p>
-                </div>
-                <div class="item">
-                    <img src="/pictures/profile_use/skill/python.svg" alt="Python3 icon">
-                    <p class="title zhw">Python 3</p>
-                </div>
-                <div class="item">
                     <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
                     <p class="title zhw">C</p>
+                </div>
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon">
+                    <p class="title zhw">jQuery</p>
                 </div>
                 <div class="item">
                     <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
