--- a/en/index.html
+++ b/en/index.html
@@ -86,8 +86,16 @@
                 <span class="enw3"></span>
             </p>
         </div>
+        <div class="subnav">
+            <button class="enw2" onclick="scrollToBlock('intro')">Self-Intro</button>
+            <button class="enw2" onclick="scrollToBlock('education')">Education</button>
+            <button class="enw2" onclick="scrollToBlock('experiences')">Experiences</button>
+            <button class="enw2" onclick="scrollToBlock('skills')">Skills</button>
+            <button class="enw2" onclick="scrollToBlock('links')">Links</button>
+            <script src="/scripts/subnav.js" type="text/javascript" defer></script>
+        </div>
         <div class="content">
-            <h2 class="enw2">Allen Chang</h2>
+            <h2 class="enw2" id="intro">Allen Chang (Yu-Lun Chang)</h2>
             <hr>
             <p class="enw2">A college student living in the Republic of China, the country that is also known as Taiwan.</p>
             <p class="enw2">I'm now focusing on full-stack devolopment, plugin and mobile application development, IoT, machine learning, and cybersecurity.</p>
@@ -134,12 +142,12 @@
                     <p class="title enw2">JavaScript</p>
                 </div>
                 <div class="item">
-                    <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
-                    <p class="title enw2">C</p>
-                </div>
-                <div class="item">
                     <img src="/pictures/profile_use/skill/jquery.svg" alt="jQuery icon">
                     <p class="title enw2">jQuery</p>
+                </div>
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/c.svg" alt="C icon">
+                    <p class="title enw2">C</p>
                 </div>
                 <div class="item">
                     <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
