--- a/en/index.html
+++ b/en/index.html
@@ -63,8 +63,10 @@
         <div class="subnav">
             <button class="enw2" onclick="scrollToBlock('intro')">Self-Intro</button>
             <button class="enw2" onclick="scrollToBlock('education')">Education</button>
-            <button class="enw2" onclick="scrollToBlock('experiences')">Experiences</button>
+            <button class="enw2" onclick="scrollToBlock('experiences')">Work Experiences</button>
+            <button class="enw2" onclick="scrollToBlock('activities')">Extracurricular Activities</button>
             <button class="enw2" onclick="scrollToBlock('skills')">Skills</button>
+            <button class="enw2" onclick="scrollToBlock('certifications')">Certifications</button>
             <button class="enw2" onclick="scrollToBlock('links')">Links</button>
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
@@ -88,7 +90,16 @@
                     <p class="time enw2">Sep 2024 ~ Present</p>
                 </a>
             </div>
-            <h3 class="enw2" id="experiences">Experiences</h3>
+            <h3 class="enw2" id="experiences">Work Experiences</h3>
+            <div class="items">
+                <a class="item" href="https://www.facebook.com/taiea.twn/" target="_blank">
+                    <img src="/pictures/profile_use/experience/taiea.png" alt="TAIEA logo">
+                    <p class="title enw2">Taiwan Artificial Intelligence Education Association</p>
+                    <p class="description enw2">Teaching Assistant</p>
+                    <p class="time enw2">Sep 2024 ~ Present</p>
+                </a>
+            </div>
+            <h3 class="enw2" id="activities">Extracurricular Activities</h3>
             <div class="items">
                 <a class="item" href="https://35.infor.org" target="_blank">
                     <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th's seal">
@@ -127,20 +138,34 @@
                     <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
                     <p class="title enw2">Arduino</p>
                 </div>
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/java.svg" alt="Java icon">
+                    <p class="title zhw">Java</p>
+                </div>
             </div>
-            <h3 class="enw2" id="links">Links</h3>
-            <div class="smallitems">
-                <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
-                    <p class="title enw2">Codeforces</p>
+            <h3 class="enw2" id="certifications">Certifications</h3>
+            <div class="items">
+                <a class="item" href="https://www.hackerrank.com/certificates/d986ce5d9af8" target="_blank">
+                    <p class="title enw2">Python (Basic)</p>
+                    <p class="description enw2">HackerRank</p>
+                    <p class="time enw2">Sep 20, 2024</p>
                 </a>
-                <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
-                    <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
-                    <p class="title enw2">AtCoder</p>
+                <a class="item" href="https://www.gept.org.tw/2022/GEPT1/org_tw/Letter_to_admission_office.pdf" target="_blank">
+                    <p class="title enw2">The General English Proficiency Test<br>(Intermediate level)</p>
+                    <p class="description enw2">The Language Training and Testing Center</p>
+                    <p class="time enw2">Jan 24, 2022</p>
                 </a>
                 <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
                     <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
                     <p class="title enw2">LinkedIn</p>
+                </a>
+                <a class="item" href="https://twitter.com/summit_AMT" target="_blank">
+                    <img src="/pictures/profile_use/link/x.svg" alt="X logo">
+                    <p class="title enw2">Twitter</p>
+                </a>
+                <a class="item" href="https://bsky.app/profile/blueboy247.bsky.social" target="_blank">
+                    <img src="/pictures/profile_use/link/bluesky.svg" alt="Bluesky logo">
+                    <p class="title enw2">Bluesky</p>
                 </a>
                 <a class="item" href="https://github.com/BlueBoy247" target="_blank">
                     <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo">
@@ -149,6 +174,17 @@
                 <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
                     <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
                     <p class="title enw2">GitRoll</p>
+                </a>
+            </div>
+            <p class="enw1">Programming Platforms</p>
+            <div class="smallitems">
+                <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
+                    <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
+                     <p class="title enw2">Codeforces</p>
+                </a>
+                <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
+                    <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
+                    <p class="title enw2">AtCoder</p>
                 </a>
                 <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
                     <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo">
@@ -161,6 +197,21 @@
                 <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
                     <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
                     <p class="title enw2">picoCTF</p>
+                </a>
+                <a class="item" href="https://www.freecodecamp.org/BlueBoy247" target="_blank">
+                    <img src="/pictures/profile_use/link/freecodecamp.svg" alt="freeCodeCamp logo">
+                    <p class="title enw2">freeCodeCamp</p>
+                </a>
+            </div>
+            <p class="enw1">Support Platforms</p>
+            <div class="smallitems">
+                <a class="item" href="https://www.patreon.com/blueboy247" target="_blank">
+                    <img src="/pictures/profile_use/link/patreon.svg" alt="Patreon logo">
+                    <p class="title enw2">Patreon</p>
+                </a>
+                <a class="item" href="https://buymeacoffee.com/blueboy247" target="_blank">
+                    <img src="/pictures/profile_use/link/buymeacoffee.svg" alt="BuyMeACoffee logo">
+                    <p class="title enw2">Buy Me A Coffee</p>
                 </a>
             </div>
         </div>
