--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <hr>
             <p class="zhw">一名正在努力不爆肝的大學生。</p>
             <p class="zhw">目前正在學習全端開發、外掛程式與手機應用開發、物聯網、機器學習及資安技術。</p>
+            <p class="zhw">興趣有彈鋼琴、打羽球、聽音樂、看動漫、看輕小說、看 VTuber 直播，很喜歡日本二次元文化，VTuber 主推 hololive 的大空スバル。</p>
             <h3 class="zhw" id="education">學歷</h3>
             <div class="items">
                 <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
@@ -83,7 +84,7 @@
                     <img src="/pictures/profile_use/education/utaipei_seal.png" alt="臺北市立大學校徽">
                     <p class="title zhw">臺北市立大學</p>
                     <p class="description zhw">資訊科學系</p>
-                    <p class="time zhw">2024/09 ~ 2028/06</p>
+                    <p class="time zhw">2024/09 ~ Present</p>
                 </a>
             </div>
             <h3 class="zhw" id="experiences">經歷</h3>
@@ -93,6 +94,12 @@
                     <p class="title zhw">建國中學資訊社35th</p>
                     <p class="description zhw">內務</p>
                     <p class="time zhw">2023/02 ~ 2023/07</p>
+                </a>
+                <a class="item" href="https://www.facebook.com/taiea.twn/" target="_blank">
+                    <img src="/pictures/profile_use/experience/taiea.png" alt="台灣校園人工智慧教育協會logo">
+                    <p class="title zhw">台灣校園人工智慧教育協會</p>
+                    <p class="description zhw">教學助理</p>
+                    <p class="time zhw">2024/09 ~ Present</p>
                 </a>
             </div>
             <h3 class="zhw" id="skills">技能</h3>
@@ -125,13 +132,41 @@
                     <img src="/pictures/profile_use/skill/arduino.svg" alt="Arduino icon">
                     <p class="title zhw">Arduino</p>
                 </div>
+                <div class="item">
+                    <img src="/pictures/profile_use/skill/java.svg" alt="Java icon">
+                    <p class="title zhw">Java</p>
+                </div>
             </div>
             <h3 class="zhw" id="links">個人連結</h3>
+            <p class="zhwb">社群平台</p>
             <div class="smallitems">
                 <a class="item" href="https://blueboy247.github.io/blog/" target="_blank">
                     <img src="/pictures/profile_use/link/myblog.ico" alt="My Blog">
                     <p class="title zhw">My Blog</p>
                 </a>
+                <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
+                    <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
+                    <p class="title zhw">LinkedIn</p>
+                </a>
+                <a class="item" href="https://twitter.com/summit_AMT" target="_blank">
+                    <img src="/pictures/profile_use/link/x.svg" alt="X logo">
+                    <p class="title zhw">Twitter</p>
+                </a>
+                <a class="item" href="https://bsky.app/profile/blueboy247.bsky.social" target="_blank">
+                    <img src="/pictures/profile_use/link/bluesky.svg" alt="Bluesky logo">
+                    <p class="title zhw">Bluesky</p>
+                </a>
+                <a class="item" href="https://github.com/BlueBoy247" target="_blank">
+                    <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo">
+                    <p class="title zhw">GitHub</p>
+                </a>
+                <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
+                    <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
+                    <p class="title zhw">GitRoll</p>
+                </a>
+            </div>
+            <p class="zhwb">解題平台</p>
+            <div class="smallitems">
                 <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
                     <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
                      <p class="title zhw">Codeforces</p>
@@ -139,14 +174,6 @@
                 <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
                     <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
                     <p class="title zhw">AtCoder</p>
-                </a>
-                <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
-                    <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
-                    <p class="title zhw">LinkedIn</p>
-                </a>
-                <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
-                    <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
-                    <p class="title zhw">GitRoll</p>
                 </a>
                 <a class="item" href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">
                     <img src="/pictures/profile_use/link/zerojudge.svg" alt="ZeroJudge logo">
@@ -167,6 +194,21 @@
                 <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
                     <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
                     <p class="title zhw">picoCTF</p>
+                </a>
+                <a class="item" href="https://www.freecodecamp.org/BlueBoy247" target="_blank">
+                    <img src="/pictures/profile_use/link/freecodecamp.svg" alt="freeCodeCamp logo">
+                    <p class="title zhw">freeCodeCamp</p>
+                </a>
+            </div>
+            <p class="zhwb">贊助平台</p>
+            <div class="smallitems">
+                <a class="item" href="https://www.patreon.com/blueboy247" target="_blank">
+                    <img src="/pictures/profile_use/link/patreon.svg" alt="Patreon logo">
+                    <p class="title zhw">Patreon</p>
+                </a>
+                <a class="item" href="https://buymeacoffee.com/blueboy247" target="_blank">
+                    <img src="/pictures/profile_use/link/buymeacoffee.svg" alt="BuyMeACoffee logo">
+                    <p class="title zhw">Buy Me A Coffee</p>
                 </a>
             </div>
         </div>
