Fix minor flaws

--- a/en/index.html
+++ b/en/index.html
@@ -155,6 +155,10 @@
                     <p class="description enw2">The Language Training and Testing Center</p>
                     <p class="time enw2">Jan 24, 2022</p>
                 </a>
+            </div>
+            <h3 class="enw2" id="links">Links</h3>
+            <p class="enw1">Social Platforms</p>
+            <div class="smallitems">
                 <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
                     <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
                     <p class="title enw2">LinkedIn</p>
