Add meta tag for SEO

--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Allen Chang">
+    <meta name="description" content="聯繫我！請填寫聯絡表單以獲取更多資訊或進行詢問，我會盡快回覆您。">
+    <meta name="keywords" content="聯繫表單, 聯繫我, 詢問, 支援, 客戶服務, 聯絡資訊, 一般聯絡, 網站改善建議, 專案改善建議, Allen, Chang, Yu-Lun, blueboy, blueboy247">
     <!-- common source -->
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/main.js" type="text/javascript" defer></script>
