--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Allen Chang">
+    <meta name="description" content="Contact me! Please fill out the contact form for more information or inquiries, and I will respond as soon as possible.">
+    <meta name="keywords" content="contact form, contact me, inquiries, support, customer service, contact information, general contact, Suggestions for website, website improvement suggestion, Suggestions for project, project improvement suggestion, Allen, Chang, Yu-Lun, blueboy, blueboy247">
     <!-- common source -->
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/main.js" type="text/javascript" defer></script>
