--- a/en/index.html
+++ b/en/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Allen Chang">
+    <meta name="description" content="Welcome to my personal website! Here you can view my resume, including education, work experience, skills, and relevant personal links.">
+    <meta name="keywords" content="personal resume, education, work experience, skills, front-end development, back-end development, technology, personal links, Allen, Chang, Yu-Lun, blueboy, blueboy247">
     <!-- common source -->
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/main.js" type="text/javascript" defer></script>
