--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Allen Chang">
+    <meta name="description" content="歡迎來到我的個人網站！在這裡您可以查看我的履歷，包括學歷、工作經歷、技能以及相關的個人連結。">
+    <meta name="keywords" content="個人網站, 技術, 程式, 資訊科技, 個人簡歷, 自我介紹, 學歷, 工作經歷, 技能, 前端開發, 後端開發, 技術, 個人連結, Allen, Chang, Yu-Lun, blueboy, blueboy247">
     <!-- common source -->
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/main.js" type="text/javascript" defer></script>
