--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Allen Chang">
+    <meta name="description" content="查看我的專案作品，展示我在各技術領域的實際經驗和創新能力。">
+    <meta name="keywords" content="專案作品, 前端開發, 後端開發, 技術專案, 網站開發, 應用程式開發, AI, IoT, 機器學習, Allen, Chang, Yu-Lun, blueboy, blueboy247">
     <!-- common source -->
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/main.js" type="text/javascript" defer></script>
