--- a/en/index.html
+++ b/en/index.html
@@ -66,7 +66,7 @@
         <div class="subnav">
             <button class="enw2" onclick="scrollToBlock('intro')">Self-Intro</button>
             <button class="enw2" onclick="scrollToBlock('education')">Education</button>
-            <button class="enw2" onclick="scrollToBlock('experiences')">Work Experiences</button>
+            <button class="enw2" onclick="scrollToBlock('experience')">Work Experiences</button>
             <button class="enw2" onclick="scrollToBlock('activities')">Extracurricular Activities</button>
             <button class="enw2" onclick="scrollToBlock('skills')">Skills</button>
             <button class="enw2" onclick="scrollToBlock('certifications')">Certifications</button>
@@ -93,7 +93,7 @@
                     <p class="time enw2">Sep 2024 ~ Present</p>
                 </a>
             </div>
-            <h3 class="enw2" id="experiences">Work Experiences</h3>
+            <h3 class="enw2" id="experience">Work Experience</h3>
             <div class="items">
                 <a class="item" href="https://www.facebook.com/taiea.twn/" target="_blank">
                     <img src="/pictures/profile_use/experience/taiea.png" alt="TAIEA logo">
